# Bamboozle_bot

./: .gitignore  4.8.0  Procfile  README.md  build.sh  db_5.py  init_db.py  main.py  migrate_db_script.py  migrate_script.py  postgres_db.py  pyproject.toml  render.yaml  requirements.txt  setup-chrome.sh  start.sh  test_connection.py  vocabulary.db2
static/css/: styles.css
templates/: book_unit.html  login.html  register.html  test.html
