[tool.poetry]
name = "flask app"
version = "0.1.0"
description = "esl game"
authors = ["david reilly <davidreilly02@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
Flask = "2.1.1"
selenium = "4.1.0"
webdriver-manager = "4.0.1"
python-dotenv = "0.19.2"
openai = "1.3.4"
requests = "2.31.0"
python-docx = "1.1.0"
jinja2 = "3.1.2"
markupsafe = "2.1.3"
werkzeug = "2.0.3"
gunicorn = "22.0.0"
typing-extensions = "4.11.0"  # Locked to a specific version
word-search-generator = "3.5.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
